[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "snl-progress-core-rs"
dynamic = ["version"]
description = "A high-performance Rust extension designed to accelerate the computational bottlenecks within the snl-progress Python solver framework."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Eriel Cabrera", email = "eecabre@sandia.gov" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
